add controller,modify models, sevices and repositories for creating the database and storing data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.mvc.format.date=DD-MM-YYYY
 spring.mvc.format.date-time=DD-MM-YYYY HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
+
+# Set logging level for root logger (change 'INFO' to 'DEBUG' or 'TRACE' for more detailed logs)
+logging.level.root=INFO
+
+# Set logging level for specific packages or classes (change 'INFO' to 'DEBUG' or 'TRACE' for more detailed logs)
+logging.level.org.springframework.web=INFO
+logging.level.tech.hospital.healthcare=DEBUG
